--- a/Angulara/src/app/homeindex/homeindex.component.html
+++ b/Angulara/src/app/homeindex/homeindex.component.html
@@ -60,9 +60,10 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <div class="card-body" style="height:300px;">
-          <img style="width:100%;height:100%;" class="mySlides" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQkTHBpAyICO-H7DH0a6kYjGznn5y2WWRLuAw6PRn7QEkqfsuXt&usqp=CAU"/>
-          <img style="width:100%;height:100%;" class="mySlides" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT6FKg7LOZ32716WR_CzKNDh-DtZSKHNnWFwTxoxYjxms-SbBhU&usqp=CAU"/>
+        <div class="card-body" *ngFor="let mydata of data[0]" style="height:300px;">
+          <!-- <span>{{ mydata.title }}</span> -->
+          <img style="width:100%;height:100%;" class="mySlides" src={{mydata.featured_image}}/>
+          <!-- <img style="width:100%;height:100%;" class="mySlides" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT6FKg7LOZ32716WR_CzKNDh-DtZSKHNnWFwTxoxYjxms-SbBhU&usqp=CAU"/> -->
           <div class="w3-center">
             <div class="w3-section">
               <a class="w3-button" style="font-size:24px;" onclick="plusDivs(-1)">❮</a>
